Fix wrapper bug on mobile

--- a/static/css/theme-override.css
+++ b/static/css/theme-override.css
@@ -110,7 +110,7 @@
 
 body {
   max-width: 1000px;
-  margin: 0 auto;
+  margin: auto;
   padding: 0.2em;
   line-height: 1.5em;
 }
@@ -258,7 +258,7 @@ blockquote {
 
 .content-wrapper {
   padding: 0px 12px 0px 12px;
-  width: 900px;
+  width: 95%;
   margin-left: auto;
   margin-right: auto;
 }
